# cmake

./: CMakeLists.txt
src/: CMakeLists.txt  cmake.cpp
src/math/: CMakeLists.txt  math.cpp  math.h
